fix: query3 client file path